<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DailyExpenseActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:padding="10dp"
        android:text="@string/daily_expense"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:padding="5dp"/>
            <EditText
                android:id="@+id/description_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_description"
                android:inputType="text"
                android:textColor="@color/black"
                android:padding="5dp"
                android:background="@drawable/textbackground"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:padding="5dp"/>
            <EditText
                android:id="@+id/amount_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_amount"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:padding="5dp"
                android:background="@drawable/textbackground"
                />


        </LinearLayout>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/new_expense"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:padding="2dp"
        android:layout_margin="10dp"
        android:background="@color/colorLightBlue"
        android:textColor="@color/white"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/view_expenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/view_expenses"
        />

</LinearLayout>